--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    ,h1>Hellow World</h1>
+    <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
   </body>
 </html>
